--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,7 @@ a {
 * {
   box-sizing: border-box;
 }
+.footer {
+  -webkit-box-shadow: 0px -3px 9px 0px rgba(0, 0, 0, 0.37);
+  box-shadow: 0px -3px 9px 0px rgba(0, 0, 0, 0.37);
+}
