--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,27 @@ a {
 * {
   box-sizing: border-box;
 }
-.footer {
-  -webkit-box-shadow: 0px -3px 9px 0px rgba(0, 0, 0, 0.37);
-  box-shadow: 0px -3px 9px 0px rgba(0, 0, 0, 0.37);
+.modalLogout {
+  -webkit-animation: modalLogout 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: modalLogout 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+@-webkit-keyframes modalLogout {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@keyframes modalLogout {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
 }
